Fixed selectmenu highlighting bug by wrapping the entire <li> contents in a div.

--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ div.events ul#output li span.instances {
 #deleteall{
 	margin-left:5px;
 }
-ul {
+div#events-div ul, div#instances-div ul {
   list-style-type:none;
   padding-left:0px;
 
